--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ bentoml>=1.3.2
 kagglehub==0.2.9
 keras==3.5.0
 pillow==10.4.0
-tensorflow[and-cuda]==2.17.0
+tensorflow[and-cuda]==2.17.0; sys_platform != 'darwin'
+tensorflow==2.17.0; sys_platform == 'darwin' and platform_machine != 'arm64'
+tensorflow-macos==2.16.2; sys_platform == 'darwin' and platform_machine == 'arm64'
 tensorflow-hub==0.16.1
-tf_keras==2.17.0
+tf_keras==2.17.0; sys_platform != 'darwin' and platform_machine != 'arm64'
+tf_keras==2.16.0; sys_platform == 'darwin' and platform_machine == 'arm64'
 Pillow==10.4.0
